# skills-geo

./: CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  publiccode.yml  pyproject.toml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml
.plugin/: plugin.json
scripts/: monitor_content.py
skills/geo/: SKILL.md  audit.md  conflicts.md
skills/geo-3d/: SKILL.md  audit.md  reference.md
skills/geo-api/: SKILL.md  audit.md  reference.md
skills/geo-inspire/: SKILL.md  audit.md
skills/geo-meta/: SKILL.md  audit.md  reference.md
skills/geo-model/: SKILL.md  audit.md
tests/: test_monitor_content.py
